--- a/blog/2021-12-20.md
+++ b/blog/2021-12-20.md
@@ -1,6 +1,6 @@
 ---
 slug: docker 部署学习
-title: docker + github action
+title: docker + github action 3
 authors:
   name: chasen
 tags: [ci, deploy]
