--- a/blog/2021-12-20.md
+++ b/blog/2021-12-20.md
@@ -1,10 +1,63 @@
 ---
 slug: docker 部署学习
-title: docker + github action 4568999
+title: docker 部署学习 + github action
 authors:
   name: chasen
 tags: [ci, deploy]
 ---
 # test blog
 
-content....test，，test 。 test888
+github action 结合docker打包镜像上传到阿里云并且自动部署
+<!--truncate-->
+```
+name: Docker Image CI
+on:
+  push:
+    branches:
+      - main
+    paths-ignore:
+      - README.md
+      - LICENSE
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Dockerfile
+        uses: actions/checkout@v2
+      # 使用Docker官方制作的action
+      # https://github.com/marketplace/actions/build-and-push-docker-images
+      # - name: Build and Push Docker Iamge
+      #   uses: docker/build-push-action@v1
+      #   with: 
+      #     registry: ${{ secrets.ALI_DOCKER_HUB_REGISTRY }}
+      #     username: ${{ secrets.ALI_DOCKER_HUB_USN }}
+      #     password: ${{ secrets.ALI_DOCKER_HUB_PWD }}
+      #     repository: chasenzh/chasenzh-repository
+      #     tag_with_sha: true
+
+      # 使用Aliyun操作指南提供的命令
+      - name: Push to Ali Docker Repository
+        run: |
+          docker login -u ${{ secrets.ALI_DOCKER_HUB_USN }} -p ${{ secrets.ALI_DOCKER_HUB_PWD }} ${{ secrets.ALI_DOCKER_HUB_REGISTRY }}
+          docker build . -f Dockerfile --tag ${{ secrets.ALI_DOCKER_HUB_REGISTRY }}/chasenzh/chasenzh-repository:latest
+          docker push ${{ secrets.ALI_DOCKER_HUB_REGISTRY }}/chasenzh/chasenzh-repository:latest
+      - name: Deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.ALI_SERVER }}
+          username: ${{ secrets.ALI_USERNAME }}
+          password: ${{ secrets.ALI_DOCKER_HUB_PWD }}
+          port: ${{ secrets.ALI_SERVER_PORT }}
+          script: |
+            if [ "$( docker container inspect -f '{{.State.Running}}' blog-page )" == "true" ]
+            then
+              docker stop blog-page
+              docker container rm blog-page
+            else
+              echo "no container blog-page creating...."
+            fi
+            docker login -u ${{ secrets.ALI_DOCKER_HUB_USN }} -p ${{ secrets.ALI_DOCKER_HUB_PWD }} ${{ secrets.ALI_DOCKER_HUB_REGISTRY }}
+            docker pull ${{ secrets.ALI_DOCKER_HUB_REGISTRY }}/chasenzh/chasenzh-repository
+            docker run -d -p 80:80 --name=blog-page ${{ secrets.ALI_DOCKER_HUB_REGISTRY }}/chasenzh/chasenzh-repository
+```
