feat update blog

--- a/blog/2021-12-20.md
+++ b/blog/2021-12-20.md
@@ -1,15 +1,13 @@
 ---
-slug: docker 部署学习
+slug: docker 部署学习 2021-12-20 
 title: docker 部署学习 + github action
 authors:
   name: chasen
-tags: [ci, deploy]
+tags: [ci, deploy, docker]
 ---
-# test blog
-
-github action 结合docker打包镜像上传到阿里云并且自动部署
+## github action 结合docker打包镜像上传到阿里云并且自动部署
 <!--truncate-->
-```
+```yml
 name: Docker Image CI
 on:
   push:
@@ -60,4 +58,30 @@ jobs:
             docker login -u ${{ secrets.ALI_DOCKER_HUB_USN }} -p ${{ secrets.ALI_DOCKER_HUB_PWD }} ${{ secrets.ALI_DOCKER_HUB_REGISTRY }}
             docker pull ${{ secrets.ALI_DOCKER_HUB_REGISTRY }}/chasenzh/chasenzh-repository
             docker run -d -p 80:80 --name=blog-page ${{ secrets.ALI_DOCKER_HUB_REGISTRY }}/chasenzh/chasenzh-repository
+```
+
+## docker 常用命令 示例
+
+```js
+// 创建镜像，指定dockerfile文件
+docker build -f Dockerfile.test -t test-react-nginx . 
+// 创建一个容器示例   
+docker run --rm -it -p 8090:83 test-react-nginx    
+
+// --build-arg 指定构建参数
+docker build --build-arg "ENV=production"  -t react-nginx-production . 
+docker build --build-arg "ENV=test"  -t react-nginx-test .
+docker run --rm -it -p 8090:80 react-nginx-production 
+
+docker ps // 查看容器列表
+docker images // 查看镜像列表
+docker stop | docker container stop // 停止容器
+docker rm | docker container rm  // 移除容器
+docker rmi // 移除容器  i指images
+
+// 挂载
+-v file:containerFile
+
+eg: 
+docker run --rm -it --name my-nginx1 -v /playground/www/blog:/usr/share/nginx/html:ro -v /etc/nginx/nginx.conf:/etc/nginx/conf.d/default.conf -p 80:80 -d nginx
 ```
