--- a/blog/2021-12-19.md
+++ b/blog/2021-12-19.md
@@ -1,14 +1,16 @@
 ---
-slug: github-action
+slug: github-action 2021-12-19 
 title: github action
 authors:
   name: chasen
 tags: [ci, deploy]
 ---
-github action 在线自动部署自动部署
+## github action 在线自动部署自动部署
 <!--truncate-->
+
+## to cloud platform
 eg1.
-```
+```yml
 name: WEBSITE DEPLOY CI
 on:
   push:
@@ -54,9 +56,9 @@ jobs:
           remote_path: ${{ secrets.YOUR_WEBSITE_REMOTE_PATH_PROD }}
 ```
 
-
+## to another Repo
 eg2.
-```
+```yml
 name: DEPLOY CI - push to another rpo
 on:
   push:
