--- a/blog/2021-12-19.md
+++ b/blog/2021-12-19.md
@@ -5,7 +5,7 @@ authors:
   name: chasen
 tags: [ci, deploy]
 ---
-## github action 在线自动部署自动部署
+## github action 在线自动部署
 <!--truncate-->
 
 ## to cloud platform
