feat: blog update

--- a/blog/2021-12-19.md
+++ b/blog/2021-12-19.md
@@ -95,3 +95,15 @@ jobs:
           user-email: ${{ secrets.UESR_EMAIL }}
           target-branch: gh-pages
 ```
+
+## 关于服务器免登录问题
+### 建立 SSH 密钥对
+mac用户:
+  ```ssh
+    mkdir -p ~/.ssh && cd ~/.ssh
+    ssh-keygen -t rsa -f fileName
+  ```
+
+  <p>1、如果是远程用户，将fileName.pub 复制到目标服务器的authorized_keys文件当中，这样就不用密码登录；</p>
+  2、如果是在目标服务器运行的上述命令，同样把fileName.pub的内容复制到authorized_keys文件当中， 或者直接cat mysite.pub >> authorized_keys
+  另外一个私钥文件fileName则可以复制到github secrets当中的ssh_private_key中（可以让github访问目标服务器而不用密码，公钥已经在authorized_keys中，已授权）。
