feat: add github action publish to npm

--- a/blog/2022-04-10.mdx
+++ b/blog/2022-04-10.mdx
@@ -6,7 +6,8 @@ authors:
 tags: [life]
 ---
 ![An image from the static](/img/love.jpeg)
-Pictures from: <a href="https://www.puckermob.com/moblog/the-truth-is-i-dont-love-myself-enough-to-let-you-love-me/">details</a>
+Picture from: <a href="https://www.puckermob.com/moblog/the-truth-is-i-dont-love-myself-enough-to-let-you-love-me/">details</a>
+<!--truncate-->
 <blockquote>
 <h3>《When I Loved Myself Enough》</h3><br/>
 当我真正开始爱自己，<br/>
