--- a/blog/2021-12-19.md
+++ b/blog/2021-12-19.md
@@ -1,15 +1,18 @@
 ---
-slug: github-action 2021-12-19 
+slug: github-action2
 title: github action
 authors:
   name: chasen
 tags: [ci, deploy]
 ---
 ## github action 在线自动部署
+
 <!--truncate-->
 
 ## to cloud platform
+
 eg1.
+
 ```yml
 name: WEBSITE DEPLOY CI
 on:
@@ -27,7 +30,7 @@ jobs:
     name: build
     steps:
       # check out the repository
-      - name: Checkout    
+      - name: Checkout  
         uses: actions/checkout@v2
  
       - name: Install Dependencies
@@ -57,7 +60,9 @@ jobs:
 ```
 
 ## to another Repo
+
 eg2.
+
 ```yml
 name: DEPLOY CI - push to another rpo
 on:
@@ -74,14 +79,14 @@ jobs:
     name: build
     steps:
       # check out the repository
-      - name: Checkout    
+      - name: Checkout  
         uses: actions/checkout@v2
  
       - name: Install Dependencies
         run: yarn
       - name: Build
         run: yarn build
-      
+    
  
       - name: Pushes to another repository
         uses: cpina/github-action-push-to-another-repository@main
@@ -97,13 +102,16 @@ jobs:
 ```
 
 ## 关于服务器免登录问题
+
 ### 建立 SSH 密钥对
-mac用户:
-  ```ssh
+
+mac 用户：
+
+```ssh
     mkdir -p ~/.ssh && cd ~/.ssh
     ssh-keygen -t rsa -f fileName
-  ```
+```
 
-  <p>1、如果是远程用户，将fileName.pub 复制到目标服务器的authorized_keys文件当中，这样就不用密码登录；</p>
-  2、如果是在目标服务器运行的上述命令，同样把fileName.pub的内容复制到authorized_keys文件当中， 或者直接cat mysite.pub >> authorized_keys
-  另外一个私钥文件fileName则可以复制到github secrets当中的ssh_private_key中（可以让github访问目标服务器而不用密码，公钥已经在authorized_keys中，已授权）。
+<p>1、如果是远程用户，将 fileName.pub 复制到目标服务器的 authorized_keys 文件当中，这样就不用密码登录；</p>
+  2、如果是在目标服务器运行的上述命令，同样把 fileName.pub 的内容复制到 authorized_keys 文件当中， 或者直接 cat mysite.pub >> authorized_keys
+  另外一个私钥文件 fileName 则可以复制到 github secrets 当中的 ssh_private_key 中（可以让 github 访问目标服务器而不用密码，公钥已经在 authorized_keys 中，已授权）。
