--- a/blog/2022-03-01.md
+++ b/blog/2022-03-01.md
@@ -4,6 +4,8 @@ title: rust学习
 authors:
   name: chasen
 tags: [rust]
+draft: true
+no_comments: false # for Disqus
 ---
 # rust 笔记
 ## 好吧，我会写rust了🤦🏻‍♀️
