--- a/blog/2021-12-20.md
+++ b/blog/2021-12-20.md
@@ -4,6 +4,8 @@ title: docker 部署学习 + github action
 authors:
   name: chasen
 tags: [ci, deploy, docker]
+draft: true
+no_comments: false # for Disqus
 ---
 ## github action 结合docker打包镜像上传到阿里云并且自动部署
 <!--truncate-->
