add: how-to-add-disqus-forum-to-docusaurus

--- a/blog/2021-12-19.md
+++ b/blog/2021-12-19.md
@@ -1,15 +1,15 @@
 ---
 slug: github-action2
-title: github action
+title: 1.github action
 authors:
   name: chasen
 tags: [ci, deploy]
 ---
-## github action 在线自动部署
+### github action 在线自动部署
 
 <!--truncate-->
 
-## to cloud platform
+### to cloud platform
 
 eg1.
 
@@ -59,7 +59,7 @@ jobs:
           remote_path: ${{ secrets.YOUR_WEBSITE_REMOTE_PATH_PROD }}
 ```
 
-## to another Repo
+### to another Repo
 
 eg2.
 
@@ -101,9 +101,9 @@ jobs:
           target-branch: gh-pages
 ```
 
-## 关于服务器免登录问题
+### 关于服务器免登录问题
 
-### 建立 SSH 密钥对
+#### 建立 SSH 密钥对
 
 mac 用户：
 
