--- a/blog/2021-12-20.md
+++ b/blog/2021-12-20.md
@@ -1,11 +1,11 @@
 ---
 slug: docker 部署学习 2021-12-20 
-title: docker 部署学习 + github action
+title: 2.docker 部署学习 + github action
 authors:
   name: chasen
 tags: [ci, deploy, docker]
 ---
-## github action 结合docker打包镜像上传到阿里云并且自动部署
+### github action 结合docker打包镜像上传到阿里云并且自动部署
 <!--truncate-->
 ```yml
 name: Docker Image CI
@@ -60,7 +60,7 @@ jobs:
             docker run -d -p 80:80 --name=blog-page ${{ secrets.ALI_DOCKER_HUB_REGISTRY }}/chasenzh/chasenzh-repository
 ```
 
-## docker 常用命令 示例
+### docker 常用命令 示例
 
 ```js
 // 创建镜像，指定dockerfile文件
