--- a/blog/2022-03-01.md
+++ b/blog/2022-03-01.md
@@ -1,12 +1,12 @@
 ---
 slug: rust
-title: rust学习
+title: 3.rust学习
 authors:
   name: chasen
 tags: [rust]
 ---
 # rust 笔记
-## 好吧，我会写rust了🤦🏻‍♀️
+### 好吧，我会写rust了🤦🏻‍♀️
 ```rust
 use std::io;
 use std::cmp::Ordering;
