--- a/blog/2022-05-10_1.md
+++ b/blog/2022-05-10_1.md
@@ -108,3 +108,8 @@ curl -LJO ${version}/xxxxxx-${version}
 // at the end of markdown
 <GetLatest/>
 ```
+
+
+
+### Reference
+https://github.com/datafuselabs/databend/blob/main/website/src/plugins/releaseVersion.jsx
