--- a/blog/2022-05-10_0.md
+++ b/blog/2022-05-10_0.md
@@ -13,7 +13,7 @@ Picture from: <a href="https://www.tukuppt.com/soback/pandeng.html">details</a>
 ### 引出
 今天看到别人的博客有评论功能，很好奇是怎么加上的。然后看到一个sass服务，很多博客模板都可以集成。https://disqus.com/ 这个控件可以帮忙解决这个问题，
 基本的评论功能，自带 twitter facebook 转发。如果要增加表情包需要升级付费。但是我个人使用当然免费就可以了😄。
-
+<!--truncate-->
 ### 网站注册步骤
 1、首页点击 GET STARTED 按钮， 没注册先注册先。
 
